# renta-bot

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
rentabot/: scrapy.cfg
rentabot/rentabot/: env.py  items.py  middlewares.py  pipelines.py  settings.py
rentabot/rentabot/spiders/: snimaemsami.py
