[tool.poetry]
name = "renta-bot"
version = "0.1.0"
description = "Bot that notify you about new appartment adverts"
authors = ["Oe Kintaro"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.1"
python-telegram-bot = "^13.10"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
